--- a/Codex-Tree/Codex-Tree.csproj
+++ b/Codex-Tree/Codex-Tree.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="Spectre.Console" Version="0.51.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="Fonts\Figlet\*.flf" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
+
 </Project>
