--- a/Codex-Tree/Codex-Tree.csproj
+++ b/Codex-Tree/Codex-Tree.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="Spectre.Console" Version="0.51.1" />
+      <PackageReference Include="SkiaSharp" Version="2.88.8" />
     </ItemGroup>
 
     <ItemGroup>
